# gpredict-improved

./: .gitignore  CLAUDE.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: build-direwolf.yml  build-ft8lib.yml  build-q65lib.yml  ci.yml
assets/: icon.icns
docs/icon-samples/: preview.html
locale/en/LC_MESSAGES/: gpredict_improved.mo  gpredict_improved.po
locale/ja/LC_MESSAGES/: fbsat59.mo  fbsat59.po  gpredict_improved.po
scripts/: 99-fbsat59.rules  99-gpredict-improved.rules  build-appimage.sh  build-dmg.sh  extract_soapy_conda.py  fbsat59.spec  gpredict-improved.spec  installer.nsi  patch_soapyrtlsdr_winusb.py  test_ftx1_split.py  test_ic9100_ctcss.py  test_ic9100_hamlib_satmode.py  test_ic9100_hamlib_satmode2.py  test_ic9100_mode_hamlib.py  test_ic9100_sat5a.py  test_ic9100_satmode_no_reopen.py  test_ic9100_satmode_ul.py  test_ic9100_ul_freq.py  test_ic9100_vfo_sub_vs_tx.py  test_ic9100_vfotx.py  write_soapy_cmake_config.py
src/: main.py
src/comms/: __init__.py  audio_device_manager.py
src/comms/aprs/: __init__.py  afsk_demod.py  direwolf.py  engine.py  parser.py
src/comms/cw/: __init__.py  codec.py  model_info.py
src/comms/ft4/: __init__.py  codec.py  qso.py  scheduler.py
src/comms/meteor/: __init__.py  image_watcher.py  satdump.py
src/comms/q65/: __init__.py  codec.py  encoder.py  qso.py  scheduler.py
src/comms/sstv/: __init__.py  decoder.py  ssdv.py
src/comms/telemetry/: __init__.py  decoder.py  gr_satellites_backend.py
src/core/: __init__.py  autotrack.py  celestial_engine.py  engine.py  hamlib_info.py  location.py  notifier.py
src/data/: __init__.py  amsat_status.py  community_transmitters.json  ctcss_db.py  database.py  eme_frequencies.json  tle_manager.py  transmitter_manager.py
src/data/telemetry_formats/: 25544.json  40908.json  42017.json  42829.json  42830.json  43786.json  43803.json  43931.json  44829.json  44909.json  47311.json  47783.json
src/fbsat59/: __init__.py  main.py
src/gpredict_improved/: __init__.py  main.py
src/i18n/: __init__.py
src/rig/: controller.py
src/sdr/: __init__.py  audio_recorder.py  demodulator.py  device.py  pipeline.py  recorder.py  sdr_state.py
src/sdr/plugins/: __init__.py  base.py
src/ui/: __init__.py  adif_utils.py  app_update_dialog.py  aprs_tab.py  autotrack_record_dialog.py  cw_model_dialog.py  cw_tab.py  dashboard_view.py  direwolf_dialog.py  ft4_tab.py  ft8lib_dialog.py  gr_satellites_dialog.py  hamlib_update_dialog.py  log_export_dialog.py  main_window.py  manual_tle_dialog.py  meteor_tab.py  pass_chart.py  pass_panel.py  q65_tab.py  q65lib_dialog.py  qth_dialog.py  radar_view.py  radio_control_widget.py  rig_dialog.py  rotator_dialog.py  satdump_dialog.py  sdr_control_widget.py  sdr_install_dialog.py  settings_dialog.py  sstv_tab.py  telemetry_tab.py  transmitter_dialog.py  world_map.py
src/web/: __init__.py  app.py  qrcode_helper.py  rig_state.py  server.py  websocket.py
src/web/static/: index.html  pass_chart.js  radar.js
tests/: conftest.py  test_audio_device_manager.py  test_database.py  test_engine.py  test_i18n.py  test_location.py  test_main_window.py  test_pass_chart.py  test_radar.py  test_rig.py  test_web.py  test_world_map.py
