[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gpredict-improved"
dynamic = ["version"]
description = "Modern satellite tracking software — an improved successor to GPredict"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "GPredict-Improved Contributors" }]
requires-python = ">=3.11"
keywords = ["amateur radio", "satellite", "tracking", "gpredict", "hamlib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]

dependencies = [
    # 軌道計算
    "skyfield>=1.48",
    "numpy>=1.26",
    # デスクトップUI
    "PySide6>=6.6",
    # Webサーバー
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    # HTTPクライアント
    "httpx>=0.27",
    # データ・バリデーション
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # DBマイグレーション
    "alembic>=1.13",
    # ユーティリティ
    "qrcode[pil]>=7.4",
    "zeroconf>=0.131",      # mDNS (gpredict-improved.local)
    "apscheduler>=3.10",    # TLE自動更新スケジューラ
    "platformdirs>=4.2",    # OS別設定ディレクトリ
    "python-dateutil>=2.9",
    "shapely>=2.0",             # 世界地図 Natural Earth ポリゴン解析
    "beautifulsoup4>=4.12",     # AMSAT運用状況スクレイピング
    "certifi>=2024.2",          # CA bundle used by httpx in PyInstaller bundles
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-python-dateutil",
    "httpx",               # テスト用モック
    "respx>=0.21",         # httpxモック
]
packaging = [
    "pyinstaller>=6.4",
    "Pillow>=10.0",        # icon processing
    # SDR deps must be present at PyInstaller build time so collect_all() bundles them
    "pyusb>=1.2",
    "scipy>=1.12",
    "sounddevice>=0.4",
    "lameenc>=1.7",
]
# Windows/macOS desktop notifications (optional; Linux uses notify-send)
notifications = [
    "plyer>=2.1",
]
# SDR support — SoapySDR itself is a system package (not pip-installable).
# Install via: apt install python3-soapysdr  /  brew install soapysdr
sdr = [
    "pyusb>=1.2",        # USB VID/PID scan for SDR Device Installation dialog
    "scipy>=1.12",       # DSP filters and Hilbert transform for demodulators
    "sounddevice>=0.4",  # Audio output (PortAudio wrapper)
    "lameenc>=1.7",     # Pure-Python MP3 encoder for audio recording
]

[project.scripts]
gpredict-improved = "gpredict_improved.main:main"

[project.urls]
Homepage = "https://github.com/JF9SOM/gpredict-improved"
Repository = "https://github.com/JF9SOM/gpredict-improved"
Issues = "https://github.com/JF9SOM/gpredict-improved/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/gpredict_improved/_version.py"

# --- Ruff (リンター・フォーマッター) ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                 # isort
    "UP",                # pyupgrade
    "B",                 # flake8-bugbear
    "SIM",               # flake8-simplify
    "ANN",               # type annotations
]
ignore = [
    "ANN401",  # Anyを許容
    "B008",    # FastAPI Depends() はデフォルト引数での関数呼び出しが正規パターン
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # テストファイルは型注釈任意
"src/main.py" = ["E402"]  # sys.path/LD_LIBRARY_PATH setup must precede project imports

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true  # Hamlib等スタブなしライブラリ
exclude = ["tests/", "scripts/"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing -v"

# --- Coverage ---
[tool.coverage.run]
source = ["src"]
omit = ["src/gpredict_improved/_version.py"]
